@@ -66,6 +66,17 @@
     <exportLayoutBorder>false</exportLayoutBorder>
     <exportLayoutBorderCrossSize>0</exportLayoutBorderCrossSize>
   </Layout>
+  <Layout combineReferences="false" width="600" height="250" buffer="0" Name="Formatted Text Font Tag" defaultCount="1" dpi="100" drawBorder="true">
+    <Element variable="this is Arial text, &lt;f=Comic Sans MS;11&gt;now Comic Sans MS text,&lt;/f&gt; and back...&lt;br&gt;this is Arial text, &lt;f=Comic Sans MS;&gt;now Comic Sans MS text,&lt;/f&gt;  and back...&lt;br&gt;this is Arial text, &lt;f=Comic Sans MS;13;1;1;1;1&gt;now Comic Sans MS text,&lt;/f&gt; and back...&lt;br&gt;this is Arial text, &lt;f=Comic Sans MS&gt;now Comic Sans MS text,&lt;/f&gt; and back...&lt;br&gt;this is Arial text, &lt;f=Comic Sans MS;;0;0;1;0&gt;now Comic Sans MS text,&lt;/f&gt; and back..." type="FormattedText" x="12" y="8" width="571" height="230" borderthickness="0" autoscalefont="false" lockaspect="false" keeporiginalsize="false" outlinethickness="0" rotation="0" horizontalalign="1" verticalalign="1" opacity="255" lineheight="27" wordspace="-1" justifiedtext="false" name="Text" font="Arial;16;0;0;0;0" elementcolor="0x000000FF" bordercolor="0x000000FF" backgroundcolor="0x00000000" enabled="true" outlinecolor="0x000000FF" />
+    <exportRotation>0</exportRotation>
+    <exportTransparentBackground>false</exportTransparentBackground>
+    <exportPDFAsPageBack>false</exportPDFAsPageBack>
+    <exportWidth>0</exportWidth>
+    <exportHeight>0</exportHeight>
+    <zoom>1</zoom>
+    <exportLayoutBorder>false</exportLayoutBorder>
+    <exportLayoutBorderCrossSize>0</exportLayoutBorderCrossSize>
+  </Layout>
   <Layout combineReferences="false" width="600" height="600" buffer="0" Name="Formatted Text Margins" defaultCount="1" dpi="300" drawBorder="true">
     <Element variable="&lt;marginleft=30;150;350&gt;&lt;marginright=200;0;50&gt;&lt;marginright=150;50;80&gt;&lt;marginright=200;250;300&gt;&lt;marginright=250;300;350&gt;&lt;b&gt;TITLE&lt;/b&gt;&lt;br&gt;This is a lot of text. It will continue for lines and lines and lines to test wrapping at different columns / x values. This is a lot of text. It will continue for lines and lines and lines to test wrapping at different columns / x values. This is a lot of text. It will continue for lines and lines and lines to test wrapping at different columns / x values. This is a lot of text. It will continue for lines and lines and lines to test wrapping at different columns / x values. This is a lot of text. It will continue for lines and lines and lines to test wrapping at different columns / x values. This is a lot of text. It will continue for lines and lines and lines to test wrapping at different columns / x values. This is a lot of text. It will continue for lines and lines and lines to test wrapping at different columns / x values. This is a lot of text. It will continue for lines and &lt;img=images\gear.png&gt; lines and lines to test wrapping at different columns.&lt;br&gt;&lt;img=images\gear.png&gt;Some more text to end it." type="FormattedText" x="61" y="100" width="490" height="352" borderthickness="0" autoscalefont="false" lockaspect="false" keeporiginalsize="false" outlinethickness="0" rotation="0" horizontalalign="0" verticalalign="0" opacity="255" tilesize="" lineheight="18" wordspace="0" justifiedtext="false" name="FormattedText" font="Arial;12;0;0;0;0" elementcolor="0x000000FF" bordercolor="0x000000FF" backgroundcolor="0x00000000" enabled="true" outlinecolor="0x000000FF" />
     <Element variable="" type="Text" x="351" y="99" width="200" height="50" borderthickness="0" autoscalefont="false" lockaspect="false" keeporiginalsize="false" outlinethickness="0" rotation="0" horizontalalign="0" verticalalign="0" opacity="255" tilesize="" lineheight="14" wordspace="0" justifiedtext="false" name="ShapeUpperRight2" font="Arial;12;0;0;0;0" elementcolor="0x000000FF" bordercolor="0x000000FF" backgroundcolor="0x0003FFFF" enabled="true" outlinecolor="0x000000FF" />
